--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 	<div class="welcome-global-funcity">
 	<h2> Welcome to </h2>
 	<h1> The Global Fun City </h1>
-	</div>
+</div>
 <img src="https://cdn1.parksmedia.wdprapps.disney.com/dam/disney-world/50th-anniversary/countdown/WDW_50th_clock_plate_bg_Desktop.png" height="410px" width="960px" class="bg2" alt="background-fixed-img"/>
-<img src="file:///C:/Users/VigneshwarVijayakuma/Pictures/Saved%20Pictures/WDW_50th_transitionSparkles_Desktop_v9.webp" class="sparkles" alt="sparkles"/>
+<img src="file:///C:/Users/VigneshwarVijayakuma/Desktop/vigneshwar.vijayakumar__web_project/assets/images/Sparkles.webp" class="sparkles" alt="sparkles"/>
 </div>
 
 
@@ -69,6 +69,18 @@
 <div class="weare">
  <p> We are so much more than an amusement park - a world where everyone comes together and enjoys the little moments.<br> <br>
 A life of fun is what everyone deserves, so come on down to the Global Fun City! </p>
+</div>
+</div>
+
+<div class="gif-tickets">
+<div class="gif">
+	<img src="./assets/images/circus.gif" alt="circus"/>
+</div>
+
+<div class="content-of-tickets">
+	<h2>Ticket Prices</h2>
+	<p>Adult Ticket</p> <span>$800</span>
+	<p>Children Ticket</p> <span>$600</span>
 </div>
 </div>
 
@@ -101,7 +113,7 @@ Enjoy scrumptious meals at Global Fun City.</p>
 	<h1>Take a Park Tour</h1>
 	<p>Give your child joy. Let's gift your baby an unforgettable experience and funny at our amusement park.	</p>
 
-	<video class="video-of-park-tour" width="1100" height="600" controls autoplay plays-inline loop>
+	<video class="video-of-park-tour" width="1100" height="600" controls>
 	 	<source src="./assets/videos/takeaparktour.mp4" type="video/mp4"> 
 	</video>
 </div>
@@ -119,6 +131,8 @@ Enjoy scrumptious meals at Global Fun City.</p>
 	
 	<img src="./assets/images/main-logo.png" class="srcatering" width="200px" alt="sr-catering-logo"/>
 </div>
+
+
 
 <div class="location">
 	<img src="./assets/images/location.png" alt="location-of-global-fun-city" width="1485" height="550"/>
