--- a/pages/book now/selectrooms.html
+++ b/pages/book now/selectrooms.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+    <meta charset='UTF-8'>
+<link rel="icon" type="image/x-icon" href="./assets/images/favicon.png">
 <title>Book Now - Global Fun City </title>
 <link rel="stylesheet" href="../../assets/book now css/selectrooms.css" />
 
@@ -53,7 +55,7 @@
 </div>
 
 <div class="btn-modify">
-    <button><i class="fa-solid fa-pen-to-square"></i><a href="../../pages/other pages/booknow.html"> Modify</a></button>
+    <a href="../../pages/other pages/booknow.html"><button><i class="fa-solid fa-pen-to-square"></i> Modify</a></button>
 </div>
 </div>
 <hr>
@@ -72,7 +74,7 @@
 
 <div class="photo-of-room-about"> <!--brief-of-room-->
 <div class="photo-of-room">
-    <img src="../../assets/images/1st-room.jpg" width="250" height="170"/>
+    <img src="../../assets/images/1st-room.jpg" width="250" height="170" alt="photo-of-room"/>
 </div>
 
 
@@ -108,7 +110,7 @@
 
 <div class="price">
     <span>$1000</span> &nbsp; / night
-   <br> &nbsp;<a href="../../pages/book now/guestinformation.html"> <button> Book Now </button></a>
+   <br> &nbsp; <a href="../../pages/book now/guestinformation.html"> <button> Book Now </button></a>
 </div>
 </div>
 
@@ -116,7 +118,7 @@
 
 <div class="photo-of-room-about"> <!--brief-of-room-->
     <div class="photo-of-room">
-        <img src="../../assets/images/3rd-room.png" width="250" height="170"/>
+        <img src="../../assets/images/3rd-room.png" width="250" height="170" alt="photo-of-room"/>
     </div>
 
 <div class="about-price">
@@ -155,7 +157,7 @@
 
 <div class="photo-of-room-about"> <!--brief-of-room-->
     <div class="photo-of-room">
-        <img src="../../assets/images/3rd-room-happyinn.png" width="250" height="170"/>
+        <img src="../../assets/images/3rd-room-happyinn.png" width="250" height="170" alt="photo-of-room"/>
     </div>
 
 <div class="about-price">
@@ -195,7 +197,7 @@
 
 <div class="photo-of-room-about"> <!--brief-of-room-->
     <div class="photo-of-room">
-        <img src="../../assets/images/4th-room-image.png" width="250" height="170"/>
+        <img src="../../assets/images/4th-room-image.png" width="250" height="170" alt="photo-of-room"/>
     </div>
 
 <div class="about-price">
@@ -239,7 +241,23 @@
 
 </div>
 <footer>
-    wertyujik
+    <div class="background-footer">
+
+        <div class="navbar-footer-logo">
+            <img src="../../assets/images/globalfuncitylogo.png" width="200" alt="logo"/>
+        </div>
+        
+        <div class="address">
+            <p>11113 W Baldwin RD, Monrovia, MD 21770, USA</p>
+            <h4><i class="fa-solid fa-phone"></i> +1 860 817 1080</h4>
+            <h4><i class="fa-solid fa-envelope"></i> info@globalfuncity.in</h4>
+        </div>
+        
+        <div class="other-policies">
+            <a href="#" >Book now Policy</a>
+        </div>
+        </div>
+
 </footer>
 </body>
 </html>
