--- a/pages/offer packages/newyear.html
+++ b/pages/offer packages/newyear.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
-    <head>
+<head>
+	<meta charset='UTF-8'>
+<link rel="icon" type="image/x-icon" href="./assets/images/favicon.png">
     <title> New Year Offer - Global Fun City </title>
 <link rel="stylesheet" href="../../assets/css/newyear.css" />
 
@@ -20,12 +22,12 @@
 <body>
 
 <div class="header" >
-<a href="../../pages/homepage/index.html" >
-<img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px"/>
+<a href="../../index.html" >
+<img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px" alt="logo"/>
 </a>
    	 <nav class="navbar">
 	 <ul>
-     <li> <a class="navigation__link" href="../../pages/homepage/index.html"><b>HOME</b></a></a></li>   
+     <li> <a class="navigation__link" href="../../index.html"><b>HOME</b></a></a></li>   
 	 <li> <a class="navigation__link" href="../../pages/other pages/home.html"> <b>ABOUT</b> </a> </li>
 	 <li> <a class="navigation__link" href="../../pages/other pages/events.html"> <b>EVENTS </b> </a> </li>
 	 <li> <a class="active" href="../../pages/other pages/offer.html"> <b>OFFERS </b> </a> </li>
@@ -48,7 +50,7 @@
 </div>
 
 <div class="newyear">
-    <img src="../../assets/images/newyear.jpg" class="new-year-photo-offer" />
+    <img src="../../assets/images/newyear.jpg" class="new-year-photo-offer" alt="new-year-image"/>
     <p>The new year party is one of the things that we all wait for every year, and one of the most sought-after venues
      for such parties is Global Fun City. This New Year’s Eve, head to Global Fun City Resort and be part of the 
     most amazing New Year party in town. It will be a fun-filled night with an exclusive DJ performance by DJ Montez from California with a gala dinner, 
@@ -79,7 +81,7 @@
         <li>Child between the ages of 5 and 11 years - $500</li>
         <li>Child 12 years & above and extra-person - $600</li>
     </ul>
-    <p>For more details, reach out to us at +91 8608171080</p>
+    <p>For more details, reach out to us at +1 8608171080</p>
 </div>  
 </div>
 
@@ -103,7 +105,7 @@
 
 <footer>
     <div class="logo">
-		<img src="../../assets/images/globalfuncitylogo.png" class="footer-logo"/>
+		<img src="../../assets/images/globalfuncitylogo.png" class="footer-logo" alt="logo"/>
 	</div>
 
 
