--- a/pages/offer packages/xmasoffer.html
+++ b/pages/offer packages/xmasoffer.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+	<meta charset='UTF-8'>
+<link rel="icon" type="image/x-icon" href="./assets/images/favicon.png">
 <title> X-Mas Offer - Global Fun City</title>
 <link rel="stylesheet" href="../../assets/css/xmasoffer.css" />
 
@@ -20,12 +22,12 @@
 <body>
 
 <div class="header" >
-<a href="../../pages/homepage/index.html" >
-<img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px"/>
+<a href="../../index.html" >
+<img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px" alt="logo"/>
 </a>
    	 <nav class="navbar">
 	 <ul>
-     <li> <a class="navigation__link" href="../../pages/homepage/index.html"><b>HOME</b></a></li>   
+     <li> <a class="navigation__link" href="../../index.html"><b>HOME</b></a></li>   
 	 <li> <a class="navigation__link" href="../../pages/other pages/home.html"> <b>ABOUT</b> </a> </li>
 	 <li> <a class="navigation__link" href="../../pages/other pages/events.html"> <b>EVENTS </b> </a> </li>
 	 <li> <a class="active" href="../../pages/other pages/offer.html"> <b>OFFERS </b> </a> </li>
@@ -47,7 +49,7 @@
 </div>
 
 <div class="newyear">
-    <img src="../../assets/images/christmas.jpg" class="new-year-photo-offer" />
+    <img src="../../assets/images/christmas.jpg" class="new-year-photo-offer" alt="x-mas-photo" />
     <p>Celebrate this Christmas at Global Fun City Parks with your friends and family, the most favourite place to spend your holidays. We’ve got your favorite rides and slides to indulge in, including seasonal sweets and treats, festive decorations, processions and special performances. You can have a blast with Christmas-themed activities, events and take home sweet memories with your friends and family.</p>
     <p>Book your stay now at Global Fun City just at $ 950+taxes</p>
 
@@ -55,13 +57,6 @@
 <div class="instructions-for-offer">
     <div class="con">
     <p>Jingle Bells On the Way</p>
-    <!-- <ul>
-        <li>Visit bookings.globalfuncity.com</li>
-        <li>Candle-lit Valentine Special Dinner with 2 glasses of Mocktail or Wine.</li>
-        <li>Gift Voucher 0f $200.</li>
-        <li>Live Guitar Music & Couple Dance.</li>
-    </ul> -->
-
     <p> Package Inclusions</p>
     <ul>
         <li>One night stay for a couple</li>
@@ -99,7 +94,7 @@
 
 <footer>
     <div class="logo">
-		<img src="../../assets/images/globalfuncitylogo.png" class="footer-logo"/>
+		<img src="../../assets/images/globalfuncitylogo.png" class="footer-logo" alt="logo"/>
 	</div>
 
 
