--- a/pages/other pages/booknow.html
+++ b/pages/other pages/booknow.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+    <meta charset='UTF-8'>
+<link rel="icon" type="image/x-icon" href="./assets/images/favicon.png">
+
 <title>Book Now - Global Fun City</title>
 <link rel="stylesheet" href="../../assets/css/booknow.css" />
 
@@ -13,14 +16,14 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@500&family=Poppins:wght@300;500&family=Rubik+Microbe&display=swap" rel="stylesheet">
 
-<script src="https://kit.fontawesome.com/1024979679.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 
 </head>
 <body>
 
 <div class="header" >
-<a href="../../pages/homepage/index.html" >
-<img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px"/>
+<a href="../../index.html" >
+<img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px" alt="logo"/>
 </a>
 <nav class="navbar">
     <ul>
@@ -58,18 +61,18 @@
 <div class="search-availablity-information-msg">
 <div class="search-availablity">
 <div class="search-information">
-    <h3>From &nbsp; <input type="date" value="08 Dec 2022" placeholder="08-12-2022"> </h3> &nbsp;
-    <h3> To  &nbsp;<input type="date" value="08 Dec 2022" placeholder="08-12-2022"></h3>
+    <p>Check in  &nbsp; <input type="date" value="08 Dec 2022" placeholder="08-12-2022"> </p> &nbsp;
+    <p>Check out  &nbsp;<input type="date" value="08 Dec 2022" placeholder="08-12-2022"></p>
 </div>
 
 
 
 <div class="room-adult-children">
-    <p>Adult </p> &nbsp;<button class="btn-sub"><i class="fa-solid fa-minus"></i></button> 
+    <p>Adult  &nbsp; </p> <button class="btn-sub"><i class="fa-solid fa-minus"></i></button> 
         <input  type="text" id="number" name="number" placeholder="1" maxlength="1" size="1"> 
         <button class="btn-add"><i class="fa-solid fa-plus"></i></button> &nbsp;
         
-    <p>Children </p>&nbsp;<button class="btn-sub"><i class="fa-solid fa-minus"></i></button> 
+    <p>Children  &nbsp;</p> <button class="btn-sub"><i class="fa-solid fa-minus"></i></button> 
     <input  type="text" id="number" name="number" placeholder="1" maxlength="1" size="1"> 
     <button class="btn-add"><i class="fa-solid fa-plus"></i></button> &nbsp;
 </div>
@@ -86,7 +89,7 @@
 </div>
 
 <div class="check-availablity">
-    <button> <a href="../../pages/book now/selectrooms.html"> Check Availablity </button> </a>
+    <a href="../../pages/book now/selectrooms.html"> <button>  Check Availablity </button> </a>
 </div>
 </div>
 
@@ -124,15 +127,26 @@
 </div>
 </div>
 
-<!-- <div class="background-footer">
-<div class="navbar-footer">
+<footer>
+<div class="background-footer">
+
+<div class="navbar-footer-logo">
     <img src="../../assets/images/globalfuncitylogo.png" width="200" alt="logo"/>
-</div> -->
+</div>
 
+<div class="address">
+    <p>11113 W Baldwin RD, Monrovia, MD 21770, USA</p>
+    <h4><i class="fa-solid fa-phone"></i> +1 860 817 1080</h4>
+    <h4><i class="fa-solid fa-envelope"></i> info@globalfuncity.in</h4>
+</div>
 
+<div class="other-policies">
+    <a href="#" >Book now Policy</a>
+</div>
 
 
 
 </div>
+</footer>
 </body>
 </html>
