--- a/pages/shop/black-collar-t-shirt-with-logo.html
+++ b/pages/shop/black-collar-t-shirt-with-logo.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+	<meta charset='UTF-8'>
+	<link rel="icon" type="image/x-icon" href="./assets/images/favicon.png">
 
 <title> Shop - Global Fun City</title>
 <link rel="stylesheet" href="../../assets/store css/black-collar-t-shirt-with-logo.css" />
@@ -14,19 +16,16 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@500&family=Poppins:wght@300;500&display=swap" rel="stylesheet">
 
-
-
-
-<script src="https://kit.fontawesome.com/1024979679.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
 <body>
 
 <div class="header" >
-<img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px"/>
+<img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px" alt="logo"/>
 
    	 <nav class="navbar">
 	 <ul>
-	<li>  <a class="navigation__link" href="../../pages/homepage/index.html"><b>HOME</b></a></li>	
+	<li>  <a class="navigation__link" href="../../index.html"><b>HOME</b></a></li>	
 	 <li> <a class="navigation__link" href="../../pages/other pages/home.html"> <b>ABOUT</b> </a> </li>
 	 <li> <a class="navigation__link" href="../../pages/other pages/events.html"> <b>EVENTS </b> </a> </li>
 	 <li> <a class="navigation__link" href="../../pages/other pages/ticketprices.html"> <b>TICKET  PRICES </b></a> </li>
@@ -48,12 +47,12 @@
 
 <div class="photo-and-content">
 <div class="photo-of-store">
-    <img src="../../assets/images/black.jpg" width="500" height="600" alt="White-T-Shirt"/>
+    <img src="../../assets/images/black.jpg" width="550" height="600" alt="White-T-Shirt"/>
 </div>
 <div class="content">    
     <h2>Black Collar T-Shirt With Logo</h2>
     <h3>$350.00</h3>
-    <p>Black Collar T-Shirt with logo is designed by Global Fun City. It is Best T-Shirt.  It will gives more cuteness to you!. BUY NOW! </p>
+    <p>Black Collar T-Shirt with logo is designed by Global Fun City. It is Best T-Shirt. <br> It will gives more cuteness to you!. BUY NOW! </p>
 <button class="btn-sub"><i class="fa-solid fa-minus"></i></button>
 <input  type="text" id="number" name="number" placeholder="1" maxlength="1" size="1">
 <button class="btn-add"><i class="fa-solid fa-plus"></i></button> &nbsp;
@@ -61,9 +60,10 @@
     <h4>Category:Style</h4>
     <h4>Product ID:0009</h4> 
 
+</div>
+</div>
 
-</div>
-</div>
+
 
 <div class="relatable">
 	<h1>Related  Products</h1>
@@ -72,24 +72,28 @@
 <div class="related-pics">
 	
 	<div class="product-img">
-	<img src="../../assets/images/cap.jpg" width="400px" height="400px"/>
-	<h3>Black Cap With Logo</h3>
+	<a href="../../pages/shop/black-cap-with-logo.html">	
+	<img src="../../assets/images/cap.jpg" width="400px" height="400px" alt="cap-image"/>
+	<h3>Black Cap With Logo</h3></a>
 		<p>$99.00</p>
 	</div>
 
 	<div class="product-img">
-	<img src="../../assets/images/gaintwheel.jpg" width="400px" height="400px"/>
-	<h3>Park T-Shirt</h3>
+		<a href="../../pages/shop/park-t-shirt.html">
+	<img src="../../assets/images/gaintwheel.jpg" width="400px" height="400px" alt="park-t-shirt"/>
+	<h3>Park T-Shirt</h3></a>
 		<p>$350.00</p>
 	</div>
 	
     <div class="product-img">
-		<img src="../../assets/images/watert-shirt.jpg" width="400px" height="400px"/>
-		<h3>Roller Coaster T-Shirt</h3>
+		<a href="../../pages/shop/roller-coaster-t-shirt.html">
+		<img src="../../assets/images/watert-shirt.jpg" width="400px" height="400px" alt="water-t-shirt-image"/>
+		<h3>Roller Coaster T-Shirt</h3></a>
 		<p>$499.00</p>
 	</div>
 </div>
 </div>
+
 
 
 <div class="full-subscribe-products">
@@ -109,7 +113,7 @@
 
 <footer>
     <div class="logo">
-		<img src="../../assets/images/globalfuncitylogo.png" class="footer-logo"/>
+		<img src="../../assets/images/globalfuncitylogo.png" class="footer-logo" alt="logo"/>
 	</div>
 
 
