--- a/pages/upcoming events/festivel-of-beer.html
+++ b/pages/upcoming events/festivel-of-beer.html
@@ -21,12 +21,12 @@
 <body>
 
 <div class="header" >
-<a href="../../pages/homepage/index.html" >
+<a href="../../index.html" >
 <img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px" alt="logo" />
 </a>
    	 <nav class="navbar">
 	 <ul>
-	 <li> <a class="navigation__link" href="../../pages/homepage/index.html"><b>HOME</b></a> </li>	
+	 <li> <a class="navigation__link" href="../../index.html"><b>HOME</b></a> </li>	
 	 <li> <a class="navigation__link" href="../../pages/other pages/home.html"> <b>ABOUT</b> </a> </li>
 	 <li> <a class="active" href="../../pages/other pages/events.html"> <b>EVENTS </b> </a> </li>
 	 <li> <a class="navigation__link" href="../../pages/other pages/offer.html"> <b>OFFERS </b> </a> </li>
