--- a/pages/book now/final-book-now.html
+++ b/pages/book now/final-book-now.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+    <meta charset='UTF-8'>
+<link rel="icon" type="image/x-icon" href="./assets/images/favicon.png">
 <title>Book Now - Global Fun City </title>
-<link rel="stylesheet" href="../../assets/book now css/guestinformation.css" />
+<link rel="stylesheet" href="../../assets/book now css/final-book-now.css" />
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,24 +21,24 @@
 <body>
 
 <div class="header" >
-<a href="../../pages/homepage/index.html" >
-<img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px"/>
+<a href="../../index.html" >
+<img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px" alt="logo"/>
 </a>
 <nav class="navbar">
     <ul>
-    <li> <a class="navigation__link" href=""> <b>HOME</b></a></li>    
-    <li> <a class="navigation__link" href=""> <b>ABOUT</b> </a> </li>
-    <li> <a class="navigation__link" href=""> <b>EVENTS </b> </a> </li>
-    <li> <a class="navigation__link" href=""> <b>OFFERS </b> </a> </li>
-    <li> <a class="navigation__link" href=""> <b>TICKET  PRICES </b></a> </li>
-    <li> <a class="navigation__link" href=""> <b>SHOP</b></a> </li>
-    <li> <a class="navigation__link" href=""> <b>ATTRACTIONS </b></a> </li>
-    <li> <a class="navigation__link" href=""> <b>CONTACT </b> </a> </li>
+    <li> <a class="navigation__link" href="../../index.html"> <b>HOME</b></a></li>    
+    <li> <a class="navigation__link" href="../../pages/other pages/home.html pages/home.html"> <b>ABOUT</b> </a> </li>
+    <li> <a class="navigation__link" href="../../pages/other pages/events.html"> <b>EVENTS </b> </a> </li>
+    <li> <a class="navigation__link" href="../../pages/other pages/offer.html"> <b>OFFERS </b> </a> </li>
+    <li> <a class="navigation__link" href="../../pages/other pages/ticketprices.html"> <b>TICKET  PRICES </b></a> </li>
+    <li> <a class="navigation__link" href="../../pages/shop/shop.html"> <b>SHOP</b></a> </li>
+    <li> <a class="navigation__link" href="../../pages/other pages/attractions.html"> <b>ATTRACTIONS </b></a> </li>
+    <li> <a class="navigation__link" href="../../pages/other pages/contact.html"> <b>CONTACT </b> </a> </li>
     </ul>
 
     </nav>
     <div>
-         <button> <b> <a href=""> BOOK NOW </b> </button> </a>
+         <button> <strong><a href=""> BOOK NOW </strong> </button> </a>
 </div>
 </div>
 
