--- a/pages/offer packages/3nights4daysoffer.html
+++ b/pages/offer packages/3nights4daysoffer.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+	<meta charset='UTF-8'>
+<link rel="icon" type="image/x-icon" href="./assets/images/favicon.png">
 <title> 3 Nights 4 Days Offer - Offer - Global Fun City </title>
 <link rel="stylesheet" href="../../assets/css/3nights4daysoffer.css" />
 
@@ -19,12 +21,12 @@
 <body>
 
 <div class="header" >
-<a href="../../pages/homepage/index.html" >
-<img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px"/>
+<a href="../../index.html" >
+<img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px" alt="logo"/>
 </a>
    	 <nav class="navbar">
 	 <ul>
-     <li> <a class="navigation__link" href="../../pages/homepage/index.html"><b>HOME</b></a></li>   
+     <li> <a class="navigation__link" href="../../index.html"><b>HOME</b></a></li>   
 	 <li> <a class="navigation__link" href="../../pages/other pages/home.html"> <b>ABOUT</b> </a> </li>
 	 <li> <a class="navigation__link" href="../../pages/other pages/events.html"> <b>EVENTS </b> </a> </li>
 	 <li> <a class="active" href="../../pages/other pages/offer.html"> <b>OFFERS </b> </a> </li>
@@ -45,7 +47,7 @@
 </div>
 
 <div class="newyear">
-    <img src="https://res.cloudinary.com/simplotel/image/upload/x_0,y_0,w_1920,h_1080,r_0,c_crop/q_80,w_455,dpr_1,f_auto,fl_progressive,c_limit/wonderla-amusement-parks-resort/3_nights_4_days_package_banner_yh4fvt" class="3nights4days-photo-offer" />
+    <img src="https://res.cloudinary.com/simplotel/image/upload/x_0,y_0,w_1920,h_1080,r_0,c_crop/q_80,w_455,dpr_1,f_auto,fl_progressive,c_limit/wonderla-amusement-parks-resort/3_nights_4_days_package_banner_yh4fvt" class="3nights4days-photo-offer" alt="3nights-4days-image" />
     <p>For those who love to travel and explore, here is an exciting package. Book a stay for 3 nights and 4 days for 2 adults at Wonderla Resort, Bengaluru and enjoy a visit to Savanadurga hill, a vineyard tour, access to Wonderla Amusement Park, indoor, outdoor and lawn games, and more at just INR 15,500 + taxes.
     </p>
    
@@ -67,7 +69,7 @@
        <li>Access to the swimming pool.</li>
 
        </ul>
-       <p>For more details, reach out to us at +91 8608171080</p>
+       <p>For more details, reach out to us at +1 8608171080</p>
    </div>  
    </div>
    
@@ -93,7 +95,7 @@
 
    <footer>
     <div class="logo">
-		<img src="../../assets/images/globalfuncitylogo.png" class="footer-logo"/>
+		<img src="../../assets/images/globalfuncitylogo.png" class="footer-logo" alt="logo"/>
 	</div>
 
 
