--- a/pages/offer packages/collegestudentoffer.html
+++ b/pages/offer packages/collegestudentoffer.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+	<meta charset='UTF-8'>
+<link rel="icon" type="image/x-icon" href="./assets/images/favicon.png">
 <title> College Student Offer - Global Fun City </title>
 <link rel="stylesheet" href="../../assets/css/collegestudentoffer.css" />
 
@@ -19,12 +21,12 @@
 <body>
 
 <div class="header" >
-<a href="../../pages/homepage/index.html" >
-<img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px"/>
+<a href="../../index.html" >
+<img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px" alt="logo"/>
 </a>
    	 <nav class="navbar">
 	 <ul>
-    <li>  <a class="navigation__link" href="../../pages/homepage/index.html"><b>HOME</b></a></li>    
+    <li>  <a class="navigation__link" href="../../index.html"><b>HOME</b></a></li>    
 	 <li> <a class="navigation__link" href="../../pages/other pages/home.html"> <b>ABOUT</b> </a> </li>
 	 <li> <a class="navigation__link" href="../../pages/other pages/events.html"> <b>EVENTS </b> </a> </li>
 	 <li> <a class="active" href="../../pages/other pages/offer.html"> <b>OFFERS </b> </a> </li>
@@ -46,7 +48,7 @@
 </div>
 
 <div class="newyear">
-    <img src="https://res.cloudinary.com/simplotel/image/upload/x_0,y_0,w_1920,h_1080,r_0,c_crop/q_80,w_1600,dpr_1,f_auto,fl_progressive,c_limit/wonderla-amusement-parks-resort/Wonderla_College_ID_20_off_esoep2" class="new-year-photo-offer" />
+    <img src="https://res.cloudinary.com/simplotel/image/upload/x_0,y_0,w_1920,h_1080,r_0,c_crop/q_80,w_1600,dpr_1,f_auto,fl_progressive,c_limit/wonderla-amusement-parks-resort/Wonderla_College_ID_20_off_esoep2" class="new-year-photo-offer" alt="college-student-offer"/>
     <p>Global Fun City offers exciting discounts on park entry for college students. Students below the age of 22 years can avail a flat 20% discount on park tickets</p>
     <p>So, hurry up and plan your college outing with your friends at our water park!</p>
 
@@ -89,7 +91,7 @@
 
 <footer>
     <div class="logo">
-		<img src="../../assets/images/globalfuncitylogo.png" class="footer-logo"/>
+		<img src="../../assets/images/globalfuncitylogo.png" class="footer-logo" alt="logo">
 	</div>
 
 
