--- a/pages/other pages/offer.html
+++ b/pages/other pages/offer.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+    <meta charset='UTF-8'>
+<link rel="icon" type="image/x-icon" href="./assets/images/favicon.png">
     <title> Offers - Global Fun City</title>
     <link rel="stylesheet" href="../../assets/css/offer.css" />
 
@@ -23,12 +25,12 @@
 
 <body>
  <div class="header">
-<a href="../../pages/homepage/index.html">
-    <img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px" />
+<a href="../../index.html">
+    <img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px" alt="logo"/>
     </a>
     <nav class="navbar">
             <ul>
-                <li> <a class="navigation__link" href="../../pages/homepage/index.html"><b>HOME</b></a> </li>	
+                <li> <a class="navigation__link" href="../../index.html"><b>HOME</b></a> </li>	
                 <li> <a class="navigation__link" href="../../pages/other pages/home.html"> <b>ABOUT</b> </a> </li>
                 <li> <a class="navigation__link" href="../../pages/other pages/events.html"> <b>EVENTS </b> </a> </li>
                 <li> <a class="active" href="../../pages/other pages/offer.html"> <b>OFFERS </b> </a> </li>
@@ -108,7 +110,7 @@
 
     <footer>
         <div class="logo">
-            <img src="../../assets/images/globalfuncitylogo.png" class="footer-logo"/>
+            <img src="../../assets/images/globalfuncitylogo.png" class="footer-logo" alt="logo"/>
         </div>
     
     
