--- a/pages/other pages/ticketprices.html
+++ b/pages/other pages/ticketprices.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+	<meta charset='UTF-8'>
+	<link rel="icon" type="image/x-icon" href="./assets/images/favicon.png">	
 <title> Ticket Prices - Global Fun City </title>
 <link rel="stylesheet" href="../../assets/css/ticketprices.css" />
 
@@ -14,18 +16,16 @@
 <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@500&family=Poppins:wght@300;500&family=Rubik+Microbe&display=swap" rel="stylesheet">
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-
-<script src="https://kit.fontawesome.com/1024979679.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
 <div class="header" >
-<a href="../../pages/homepage/index.html" >
-<img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px"/>
+<a href="../../index.html" >
+<img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px" alt="logo"/>
 </a>
    	 <nav class="navbar">
 	 <ul>
-		<li> <a class="navigation__link" href="../../pages/homepage/index.html"><b>HOME</b></a> </li>		
+		<li> <a class="navigation__link" href="../../index.html"><b>HOME</b></a> </li>		
 	 <li> <a class="navigation__link" href="../../pages/other pages/home.html"> <b>ABOUT</b> </a> </li>
 	 <li> <a class="navigation__link" href="../../pages/other pages/events.html"> <b>EVENTS </b> </a> </li>
 	 <li> <a class="navigation__link" href="../../pages/other pages/offer.html"> <b>OFFERS </b> </a> </li>
@@ -46,9 +46,9 @@
 
 
 
-	<video autoplay loop muted plays-inline class="back-video">
+<video autoplay="false" loop muted plays-inline class="back-video">
 	  <source src="../../assets/images/aquapark video.mp4"  type="video/mp4">
-  </video>
+</video>
 
 </div>
 <div class="upward-ticketprices">
@@ -93,7 +93,7 @@
 
 <footer>
 	<div class="logo">
-		<img src="../../assets/images/globalfuncitylogo.png" class="footer-logo"/>
+		<img src="../../assets/images/globalfuncitylogo.png" class="footer-logo" alt="logo"/>
 	</div>
 
 
