--- a/pages/shop/proceedcheckout.html
+++ b/pages/shop/proceedcheckout.html
@@ -2,13 +2,14 @@
 <html lang="en">
 
 <head>
-
+	<meta charset='UTF-8'>
+	<link rel="icon" type="image/x-icon" href="./assets/images/favicon.png">
 <title> Checkout - Completed - Global Fun City</title>
 <link rel="stylesheet" href="../../assets/store css/proceedcheckout.css" />
 
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Inter+Tight&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Nanum+Pen+Script&family=Open+Sans:wght@700&family=Poppins:wght@300;500&family=Reem+Kufi&family=Sacramento&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter+Tight&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Nanum+Pen+Script&family=Open+Sans:wght@700&family=Poppins:wght@300;500&family=Reem+Kufi&family=Sacramento&display=swap" rel="stylesheet">
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -73,7 +74,93 @@
 </div>
 </div>
 
+<footer>
+    <div class="logo">
+		<img src="../../assets/images/globalfuncitylogo.png" class="footer-logo" alt="logo"/>
+	</div>
 
+
+<div class="address-open-hours-contact">	
+<div class="address">
+	<h3>Location</h3>
+	<p>11113 W Baldwin RD, Monrovia, MD 21770, United States of America.</p>
+</div>
+
+<div class="open-hours">
+	<h3>Open Hours</h3>
+	<p>
+		Weekdays: 09.30 am - 06:00 pm.<br>
+		Weekends and Holidays: 09.30 am - 06.30 pm.
+	</p>
+</div>
+
+<div class="contact-for-more">
+	<h3>Contact</h3>
+	<p>+1 860 817 1080</p>
+	<p>info@globalfuncity.in</p>
+</div>
+</div>
+
+
+
+
+
+
+    <div class="navbar-footer">
+		<ul>
+			<li> <a class="navigation__link" href="../../pages/other pages/home.html"> ABOUT US </a> </li>
+			<li> <a class="navigation__link" href="../../pages/other pages/events.html"> EVENTS  </a> </li>
+			<li> <a class="navigation__link" href="../../pages/other pages/offer.html"> OFFERS  </a> </li>
+			<li> <a class="navigation__link" href="../../pages/other pages/ticketprices.html"> TICKET  PRICES </a> </li>
+			<li> <a class="navigation__link" href="../../pages/shop/shop.html"> SHOP </a> </li>
+			<li> <a class="navigation__link" href="../../pages/other pages/attractions.html"> ATTRACTIONS </a> </li>
+			<li> <a class="navigation__link" href="../../pages/other pages/contact.html"> CONTACT  </a> </li>
+		</ul>
+
+
+	</div>
+
+<div class="other-navbar-footer">
+	<ul>
+		<li> <a class="other-navigation-link" href="../../pages/other pages/privacypolicy.html">PRIVACY POLICY</a></li>
+        <li> <a class="other-navigation-link" href="../../pages/other pages/safetyofvisitors.html">SAFETY AND HYGIENE</a></li>
+		<li> <a class="other-navigation-link" href="../../pages/other pages/rulesandregulations.html">RULES & REGULTIONS</a></li>
+		<li> <a class="other-navigation-link" href="../../pages/other pages/greeninitiatives.html">GREEN INITIATIVES</a></li>
+		<li> <a class="other-navigation-link" href="../../pages/other pages/csrinitiatives.html">CSR INITIATIVES</a></li>
+	</ul>
+</div>
+
+	<div class="social-medias">
+		<div class="facebook">
+		<a href="#"><i class="fab fa-facebook-f"></i></a>
+		</div>
+
+		<div class="twitter">
+	    <a href="#"><i class="fab fa-twitter"></i></a>
+		</div>
+
+		<div class="pinterest">
+		<a href="#"><i class="fab fa-pinterest"></i></a>
+		</div>
+	
+		<div class="instagram">
+	    <a href="#"><i class="fab fa-instagram"></i></a>
+		</div>
+
+		<div class="youtube">
+		<a href="#"><i class="fab fa-youtube"></i></a>
+		</div>
+	
+
+		
+	    
+	</div>
+	<hr>
+	<div class="copyright">
+	<p>Global Fun City &#169; 2022. All rights Reserved.
+        <br>Site designed by Vignesh.in</p>
+	</div>
+</footer>
 
 
 </body>
