--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <title> Global Fun City </title>
 <link rel="stylesheet" href="./assets/css/style.css" />
 
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Inter+Tight&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Nanum+Pen+Script&family=Open+Sans:wght@700&family=Poppins:wght@300;500&family=Reem+Kufi&family=Sacramento&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter+Tight&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Nanum+Pen+Script&family=Open+Sans:wght@700&family=Poppins:wght@300;500&family=Reem+Kufi&family=Sacramento&display=swap" rel="stylesheet">
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -55,7 +55,7 @@
 	<h1> The Global Fun City </h1>
 </div>
 <img src="https://cdn1.parksmedia.wdprapps.disney.com/dam/disney-world/50th-anniversary/countdown/WDW_50th_clock_plate_bg_Desktop.png" height="410px" width="960px" class="bg2" alt="background-fixed-img"/>
-<img src="file:///C:/Users/VigneshwarVijayakuma/Desktop/vigneshwar.vijayakumar__web_project/assets/images/Sparkles.webp" class="sparkles" alt="sparkles"/>
+<img src="./assets/images/Sparkles.webp" class="sparkles" alt="sparkles"/>
 </div>
 
 
@@ -72,17 +72,6 @@ A life of fun is what everyone deserves, so come on down to the Global Fun City!
 </div>
 </div>
 
-<div class="gif-tickets">
-<div class="gif">
-	<img src="./assets/images/circus.gif" alt="circus"/>
-</div>
-
-<div class="content-of-tickets">
-	<h2>Ticket Prices</h2>
-	<p>Adult Ticket</p> <span>$800</span>
-	<p>Children Ticket</p> <span>$600</span>
-</div>
-</div>
 
 <div class="updown">
 <div>
@@ -105,6 +94,18 @@ A life of fun is what everyone deserves, so come on down to the Global Fun City!
 <p>Relish a delightful gastronomical experience. <br>
 Enjoy scrumptious meals at Global Fun City.</p>
 </div>
+</div>
+
+<div class="gif-tickets">
+	<div class="gif">
+		<img src="./assets/images/circus.gif" alt="circus"/>
+	</div>
+	
+	<div class="content-of-tickets">
+		<h2>Ticket Prices</h2>
+		<p>Adult Ticket</p> <span>$800</span>
+		<p>Children Ticket</p> <span>$600</span>
+	</div>
 </div>
 
 <section class="parktour">
