--- a/pages/book now/guestinformation.html
+++ b/pages/book now/guestinformation.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset='UTF-8'>
-<link rel="icon" type="image/x-icon" href="./assets/images/favicon.png">
+<link rel="icon" type="image/x-icon" href="../../assets/images/favicon.png">
 <title>Book Now - Global Fun City </title>
 <link rel="stylesheet" href="../../assets/book now css/guestinformation.css"/>
 
