--- a/pages/other pages/contact.html
+++ b/pages/other pages/contact.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+	<meta charset='UTF-8'>
+	<link rel="icon" type="image/x-icon" href="../../assets/images/favicon.png">
 
-	<title> Contact - Global Fun City</title>
+<title> Contact - Global Fun City</title>
 <link rel="stylesheet" href="../../assets/css/contact.css" />
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,18 +18,16 @@
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 
-<script src="https://kit.fontawesome.com/1024979679.js" crossorigin="anonymous"></script>
-
 </head>
 <body>
 
 <div class="header" >
-<a href="../../pages/homepage/index.html" >
-<img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px"/>
+<a href="../../index.html" >
+<img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px" alt="logo"/>
 </a>
    	 <nav class="navbar">
 	 <ul>
-	 <li> <a class="navigation__link" href="../../pages/homepage/index.html"><b>HOME</b></a></li>	
+	 <li> <a class="navigation__link" href="../../index.html"><b>HOME</b></a></li>	
 	 <li> <a class="navigation__link" href="../../pages/other pages/home.html"> <b>ABOUT</b> </a> </li>
 	 <li> <a class="navigation__link" href="../../pages/other pages/events.html"> <b>EVENTS </b> </a> </li>
 	 <li> <a class="navigation__link" href="../../pages/other pages/offer.html"> <b>OFFERS </b> </a> </li>
@@ -91,7 +91,7 @@ info@globalfuncity.com
 
 <footer>
 	<div class="logo">
-		<img src="../../assets/images/globalfuncitylogo.png" class="footer-logo"/>
+		<img src="../../assets/images/globalfuncitylogo.png" class="footer-logo" alt="logo"/>
 	</div>
 
 
