--- a/pages/other pages/ticketprices.html
+++ b/pages/other pages/ticketprices.html
@@ -77,6 +77,18 @@
 </div>
 </div>
 
+<div class="content-gif">
+<div class="content">
+	<h1>Exciting Events Happening At Global Fun City</h1>
+	<a href="../../pages/other pages/events.html"><button>Learn More</button></a>
+</div>
+
+<div class="gif">
+	<img src="../../assets/images/carousel-unscreen.gif" width="600" alt="gif"/>
+</div>
+</div>
+
+
 <section class="get-updates">
 	<h1>Want to Get Updates?</h1>
 	<div class="email-address">
