--- a/pages/shop/checkout.html
+++ b/pages/shop/checkout.html
@@ -4,7 +4,7 @@
 <head>
 
     <meta charset='UTF-8'>
-	<link rel="icon" type="image/x-icon" href="./assets/images/favicon.png">
+	<link rel="icon" type="image/x-icon" href="../../assets/images/favicon.png">
 
 <title> Checkout - Shop - Global Fun City</title>
 <link rel="stylesheet" href="../../assets/store css/checkout.css" />
@@ -151,9 +151,11 @@
     <ul>
         <li><input type="radio" name="payment-method">
             Cash on delivery<p>Pay with cash on delivery</p> </li>
+            <li><input type="radio" name="payment-method"> Credit Card/Debit Card </li>    
         <li><input type="radio" name="payment-method">
         Paytm</li>
         <li><input type="radio" name="payment-method"> Google pay </li>
+        
     </ul>
     <a href="../../pages/shop/proceedcheckout.html"><button class="btn-proceed">Proceed</button></a>
     <a href="../../pages/shop/shop.html"> <button class="btn-cancel">Cancel Order</button></a>
