--- a/pages/other pages/attractions.html
+++ b/pages/other pages/attractions.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+<meta charset='UTF-8'>
+<link rel="icon" type="image/x-icon" href="../../assets/images/favicon.png">
 <title> Attractions - Global Fun City</title>
 <link rel="stylesheet" href="../../assets/css/attractions.css" />
 
@@ -19,12 +21,12 @@
 <body>
 
 <div class="header" >
-<a href="../../pages/homepage/index.html" >
-<img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px"/>
+<a href="../../index.html" >
+<img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px" alt="logo"/>
 </a>
    	 <nav class="navbar">
 	 <ul>
-     <li> <a class="navigation__link" href="../../pages/homepage/index.html"> <b>HOME</b></a></li>   
+     <li> <a class="navigation__link" href="../../index.html"> <b>HOME</b></a></li>   
 	 <li> <a class="navigation__link" href="../../pages/other pages/home.html"> <b>ABOUT </b> </a> </li>
 	 <li> <a class="navigation__link" href="../../pages/other pages/events.html"> <b>EVENTS </b> </a> </li>
 	 <li> <a class="navigation__link" href="../../pages/other pages/offer.html"> <b>OFFERS </b> </a> </li>
@@ -93,10 +95,19 @@
 </video>
 </div>
 
+<div class="gif-content">
+<div class="gif">
+    <img src="../../assets/images/roller-coaster.gif" alt="roller-coaster"/>
+</div>
+
+<div class="content">
+    <h2>Drop in With your Family for a World Class Experience. </h2>
+</div>
+</div>
 
 <footer>
     <div class="logo">
-        <img src="../../assets/images/globalfuncitylogo.png" class="footer-logo"/>
+        <img src="../../assets/images/globalfuncitylogo.png" class="footer-logo" alt="logo"/>
     </div>
 
 
