--- a/pages/shop/funny-t-shirt.html
+++ b/pages/shop/funny-t-shirt.html
@@ -1,32 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-
+	<meta charset='UTF-8'>
+	<link rel="icon" type="image/x-icon" href="../../assets/images/favicon.png">
 <title> Shop - Global Fun City</title>
 <link rel="stylesheet" href="../../assets/store css/funny-t-shirt.css" />
 
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Inter+Tight&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Nanum+Pen+Script&family=Open+Sans:wght@700&family=Poppins:wght@300;500&family=Reem+Kufi&family=Sacramento&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter+Tight&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Nanum+Pen+Script&family=Open+Sans:wght@700&family=Poppins:wght@300;500&family=Reem+Kufi&family=Sacramento&display=swap" rel="stylesheet">
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@500&family=Poppins:wght@300;500&display=swap" rel="stylesheet">
 
-
-
-
-<script src="https://kit.fontawesome.com/1024979679.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
 <body>
 
 <div class="header" >
-<img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px"/>
+<img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px" alt="logo"/>
 
    	 <nav class="navbar">
 	 <ul>
-	<li>  <a class="navigation__link" href="../../pages/homepage/index.html"><b>HOME</b></a></li>	
+	<li>  <a class="navigation__link" href="../../index.html"><b>HOME</b></a></li>	
 	 <li> <a class="navigation__link" href="../../pages/other pages/home.html"> <b>ABOUT</b> </a> </li>
 	 <li> <a class="navigation__link" href="../../pages/other pages/events.html"> <b>EVENTS </b> </a> </li>
 	 <li> <a class="navigation__link" href="../../pages/other pages/ticketprices.html"> <b>TICKET  PRICES </b></a> </li>
@@ -48,12 +46,12 @@
 
 <div class="photo-and-content">
 <div class="photo-of-store">
-    <img src="../../assets/images/repeat.jpg" width="500" height="600" alt="White-T-Shirt"/>
+    <img src="../../assets/images/repeat.jpg" width="550" height="600" alt="White-T-Shirt"/>
 </div>
 <div class="content">    
     <h2>Funny eat sleep roller coaster T-Shirt</h2>
     <h3>$459.00</h3>
-    <p>This T-Shirt is designed by Global Fun City. It is Best T-Shirt.  It will gives more cuteness to you!. BUY NOW! </p>
+    <p>This T-Shirt is designed by Global Fun City. It is Best T-Shirt. <br> It will gives more cuteness to you!. BUY NOW! </p>
 <button class="btn-sub"><i class="fa-solid fa-minus"></i></button>
 <input  type="text" id="number" name="number" placeholder="1" maxlength="1" size="1">
 <button class="btn-add"><i class="fa-solid fa-plus"></i></button> &nbsp;
@@ -72,20 +70,23 @@
 <div class="related-pics">
 	
 	<div class="product-img">
-	<img src="../../assets/images/blackbag.jpg" width="400px" height="400px"/>
-	<h3>Black Bag With Logo</h3>
+		<a href="../../pages/shop/black-bag-with-logo.html">
+	<img src="../../assets/images/blackbag.jpg" width="400px" height="400px" alt="black-bag-image"/>
+	<h3>Black Bag With Logo</h3></a>
 		<p>$149.00</p>
 	</div>
 
 	<div class="product-img">
-	<img src="../../assets/images/whitebag.jpg" width="400px" height="400px"/>
-	<h3>White Bag With Logo</h3>
+		<a href="../../pages/shop/white-bag-with-logo.html">
+	<img src="../../assets/images/whitebag.jpg" width="400px" height="400px" alt="white-bag-image"/>
+	<h3>White Bag With Logo</h3></a>
 		<p>$149.00</p>
 	</div>
 	
     <div class="product-img">
-		<img src="../../assets/images/t-shirt.jpg" width="400px" height="400px"/>
-		<h3>White T-Shirt With Logo</h3>
+		<a href="../../pages/shop/whitetshirt.html">
+		<img src="../../assets/images/t-shirt.jpg" width="400px" height="400px" alt="white-t-shirt-image" />
+		<h3>White T-Shirt With Logo</h3> </a>
 		<p>$199.00</p>
 	</div>
 </div>
@@ -109,7 +110,7 @@
 
 <footer>
     <div class="logo">
-		<img src="../../assets/images/globalfuncitylogo.png" class="footer-logo"/>
+		<img src="../../assets/images/globalfuncitylogo.png" class="footer-logo" alt="logo"/>
 	</div>
 
 
