--- a/pages/shop/shop.html
+++ b/pages/shop/shop.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset='UTF-8'>
-	<link rel="icon" type="image/x-icon" href="./assets/images/favicon.png">
+	<link rel="icon" type="image/x-icon" href="../../assets/images/favicon.png">
     <title> Shop - Global Fun City</title>
 <link rel="stylesheet" href="../../assets/css/shop.css" />
 
