--- a/pages/shop/white-bag-with-logo.html
+++ b/pages/shop/white-bag-with-logo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
 
@@ -14,19 +14,16 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@500&family=Poppins:wght@300;500&display=swap" rel="stylesheet">
 
-
-
-
-<script src="https://kit.fontawesome.com/1024979679.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
 <body>
 
 <div class="header" >
-<img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px"/>
+<img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px" alt="logo"/>
 
    	 <nav class="navbar">
 	 <ul>
-	<li>  <a class="navigation__link" href="../../pages/homepage/index.html"><b>HOME</b></a></li>	
+	<li>  <a class="navigation__link" href="../../index.html"><b>HOME</b></a></li>	
 	 <li> <a class="navigation__link" href="../../pages/other pages/home.html"> <b>ABOUT</b> </a> </li>
 	 <li> <a class="navigation__link" href="../../pages/other pages/events.html"> <b>EVENTS </b> </a> </li>
 	 <li> <a class="navigation__link" href="../../pages/other pages/ticketprices.html"> <b>TICKET  PRICES </b></a> </li>
@@ -53,7 +50,7 @@
 <div class="content">    
     <h2>White Bag With Logo</h2>
     <h3>$149.00</h3>
-    <p>This Bag is designed by Global Fun City. It is Best T-Shirt.  It will gives more cuteness to you!. BUY NOW! </p>
+    <p>This Bag is designed by Global Fun City. It is Best T-Shirt.<br>  It will gives more cuteness to you!. BUY NOW! </p>
 <button class="btn-sub"><i class="fa-solid fa-minus"></i></button>
 <input  type="text" id="number" name="number" placeholder="1" maxlength="1" size="1">
 <button class="btn-add"><i class="fa-solid fa-plus"></i></button> &nbsp;
@@ -72,20 +69,23 @@
 <div class="related-pics">
 	
 	<div class="product-img">
-	<img src="../../assets/images/t-shirt.jpg" width="400px" height="400px"/>
-	<h3>White T-Shirt With Logo</h3>
+		<a href="../../pages/shop/whitetshirt.html">
+	<img src="../../assets/images/t-shirt.jpg" width="400px" height="400px" alt="white-t-shirt-image"/>
+	<h3>White T-Shirt With Logo</h3></a>
 		<p>$199.00</p>
 	</div>
 
 	<div class="product-img">
-	<img src="../../assets/images/thingsidoin-shirt.jpg" width="400px" height="400px"/>
-	<h3>Black T-Shirt With Events</h3>
+		<a href="../../pages/shop/black-t-shirt-with-events.html">
+	<img src="../../assets/images/thingsidoin-shirt.jpg" width="400px" height="400px" alt="black-t-shirt-image"/>
+	<h3>Black T-Shirt With Events</h3></a>
 		<p>$299.00</p>
 	</div>
 	
     <div class="product-img">
-		<img src="../../assets/images/black.jpg" width="400px" height="400px"/>
-		<h3>Black Collar T-Shirt With Events</h3>
+		<a href="../../pages/shop/black-collar-t-shirt-with-logo.html">
+		<img src="../../assets/images/black.jpg" width="400px" height="400px" alt="black-collar-shirt-image"/>
+		<h3>Black Collar T-Shirt With Events</h3></a>
 		<p>$350.00</p>
 	</div>
 </div>
