--- a/pages/book now/selectrooms.html
+++ b/pages/book now/selectrooms.html
@@ -15,14 +15,14 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@500&family=Poppins:wght@300;500&family=Rubik+Microbe&display=swap" rel="stylesheet">
 
-<script src="https://kit.fontawesome.com/1024979679.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 
 </head>
 <body>
 
 <div class="header" >
-<a href="../../pages/homepage/index.html" >
-<img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px"/>
+<a href="../../index.html" >
+<img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px" alt="logo"/>
 </a>
 <nav class="navbar">
     <ul>
