--- a/pages/other pages/events.html
+++ b/pages/other pages/events.html
@@ -4,6 +4,7 @@
 <head>
 	
 <meta charset='UTF-8'>
+<link rel="icon" type="image/x-icon" href="../../assets/images/favicon.png">
 
 <title> Events - Global Fun City </title>
 
@@ -103,11 +104,11 @@
 </section>
 
 <div class="videos">
-<video width="" height="600" autoplay loop controls>
+<video width="" height="600" controls>
 	<source src="../../assets/videos/10000000_535383348165841_7686719261084481509_n.mp4" type="video/mp4"> 
 	</video>
 
-<video width=""  height="600" autoplay loop controls>
+<video width=""  height="600" controls>
 	<source src="../../assets/videos/roller-coaster.mp4" type="video/mp4">
 </video>	
 </div>
