--- a/pages/other pages/offer.html
+++ b/pages/other pages/offer.html
@@ -2,12 +2,10 @@
 <html lang="en">
 
 <head>
-    <meta charset='UTF-8'>
-<link rel="icon" type="image/x-icon" href="./assets/images/favicon.png">
+<meta charset='UTF-8'>
+<link rel="icon" type="image/x-icon" href="../../assets/images/favicon.png">
     <title> Offers - Global Fun City</title>
     <link rel="stylesheet" href="../../assets/css/offer.css" />
-
-    
 
     <link rel="stylesheet" href="../../assets/css/normalize.css">
 
