--- a/pages/other pages/rulesandregulations.html
+++ b/pages/other pages/rulesandregulations.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+<meta charset='UTF-8'>
+<link rel="icon" type="image/x-icon" href="./assets/images/favicon.png">
 
 <title>Rules and Regulations - Global Fun City</title>
 <link rel="stylesheet" href="../../assets/css/rulesandregulations.css" />
@@ -20,12 +22,12 @@
 <body>
 
 <div class="header" >
-<a href="../../pages/homepage/index.html" >
-<img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px"/>
+<a href="../../index.html" >
+<img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px" alt="logo"/>
 </a>
    	 <nav class="navbar">
 	 <ul>
-     <li> <a class="navigation__link" href="../../pages/homepage/index.html"><b>HOME</b></a> </li>
+     <li> <a class="navigation__link" href="../../index.html"><b>HOME</b></a> </li>
 	 <li> <a class="navigation__link" href="../../pages/other pages/home.html"> <b>ABOUT</b> </a> </li>
 	 <li> <a class="navigation__link" href="../../pages/other pages/events.html"> <b>EVENTS </b> </a> </li>
 	 <li> <a class="navigation__link" href="../../pages/other pages/offer.html"> <b>OFFERS </b> </a> </li>
@@ -95,9 +97,95 @@
 <div class="instructions">
     <p>We may photograph, film, videotape, record or otherwise reproduce the image and/or voice of any person who enters the park and use the same for any purpose without payment to any person</p>
 </div>
-
-
-
 </div>
+
+<footer>
+    <div class="logo">
+		<img src="../../assets/images/globalfuncitylogo.png" class="footer-logo" alt="logo"/>
+	</div>
+
+
+<div class="address-open-hours-contact">	
+<div class="address">
+	<h3>Location</h3>
+	<p>11113 W Baldwin RD, Monrovia, MD 21770, United States of America.</p>
+</div>
+
+<div class="open-hours">
+	<h3>Open Hours</h3>
+	<p>
+		Weekdays: 09.30 am - 06:00 pm.<br>
+		Weekends and Holidays: 09.30 am - 06.30 pm.
+	</p>
+</div>
+
+<div class="contact-for-more">
+	<h3>Contact</h3>
+	<p>+1 860 817 1080</p>
+	<p>info@globalfuncity.in</p>
+</div>
+</div>
+
+
+
+
+
+
+    <div class="navbar-footer">
+		<ul>
+			<li> <a class="navigation__link" href="../../pages/other pages/home.html"> ABOUT US </a> </li>
+			<li> <a class="navigation__link" href="../../pages/other pages/events.html"> EVENTS  </a> </li>
+			<li> <a class="navigation__link" href="../../pages/other pages/offer.html"> OFFERS  </a> </li>
+			<li> <a class="navigation__link" href="../../pages/other pages/ticketprices.html"> TICKET  PRICES </a> </li>
+			<li> <a class="navigation__link" href="../../pages/shop/shop.html"> SHOP </a> </li>
+			<li> <a class="navigation__link" href="../../pages/other pages/attractions.html"> ATTRACTIONS </a> </li>
+			<li> <a class="navigation__link" href="../../pages/other pages/contact.html"> CONTACT  </a> </li>
+		</ul>
+
+
+	</div>
+
+<div class="other-navbar-footer">
+	<ul>
+		<li> <a class="other-navigation-link" href="../../pages/other pages/privacypolicy.html">PRIVACY POLICY</a></li>
+        <li> <a class="other-navigation-link" href="../../pages/other pages/safetyofvisitors.html">SAFETY AND HYGIENE</a></li>
+		<li> <a class="other-navigation-link" href="../../pages/other pages/rulesandregulations.html">RULES & REGULTIONS</a></li>
+		<li> <a class="other-navigation-link" href="../../pages/other pages/greeninitiatives.html">GREEN INITIATIVES</a></li>
+		<li> <a class="other-navigation-link" href="../../pages/other pages/csrinitiatives.html">CSR INITIATIVES</a></li>
+	</ul>
+</div>
+
+	<div class="social-medias">
+		<div class="facebook">
+		<a href="#"><i class="fab fa-facebook-f"></i></a>
+		</div>
+
+		<div class="twitter">
+	    <a href="#"><i class="fab fa-twitter"></i></a>
+		</div>
+
+		<div class="pinterest">
+		<a href="#"><i class="fab fa-pinterest"></i></a>
+		</div>
+	
+		<div class="instagram">
+	    <a href="#"><i class="fab fa-instagram"></i></a>
+		</div>
+
+		<div class="youtube">
+		<a href="#"><i class="fab fa-youtube"></i></a>
+		</div>
+	
+
+		
+	    
+	</div>
+	<hr>
+	<div class="copyright">
+	<p>Global Fun City &#169; 2022. All rights Reserved.
+        <br>Site designed by Vignesh.in</p>
+	</div>
+</footer>
+
 </body>
 </html>
