--- a/pages/shop/cart.html
+++ b/pages/shop/cart.html
@@ -87,13 +87,13 @@
 
 <table class="card-totals">
     <tr>
-        <th>Subtotals</th>
-        <th>$498.00</th>
+        <th id="total">Subtotals</th>
+        <th id="price">$498.00</th>
     </tr>
 
     <tr>
-        <th>Total</th>
-        <th>$498.00</th>
+        <th id="total">Total</th>
+        <th id="price">$498.00</th>
     </tr>
 </table>
 
