--- a/pages/upcoming events/folklore_festivel.html
+++ b/pages/upcoming events/folklore_festivel.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+<meta charset='UTF-8'>
+<link rel="icon" type="image/x-icon" href="../../assets/images/favicon.png">
+	
 <title> Folklore Festival - Global Fun City </title>
 <link rel="stylesheet" href="../../assets/upcoming events css/folklore_festivel.css" />
 
