--- a/pages/other pages/booknow.html
+++ b/pages/other pages/booknow.html
@@ -27,7 +27,7 @@
 </a>
 <nav class="navbar">
     <ul>
-    <li> <a class="navigation__link" href="../../pages/homepage/index.html"><b>HOME</b></a></li>   
+    <li> <a class="navigation__link" href="../../index.html"><b>HOME</b></a></li>   
     <li> <a class="navigation__link" href="../../pages/other pages/home.html"> <b>ABOUT</b> </a> </li>
     <li> <a class="navigation__link" href="../../pages/other pages/events.html"> <b>EVENTS </b> </a> </li>
     <li> <a class="navigation__link" href="../../pages/other pages/offer.html"> <b>OFFERS </b> </a> </li>
