--- a/pages/other pages/home.html
+++ b/pages/other pages/home.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 
 <html lang="en">
-
-
 <head>
 
 <meta charset='UTF-8'>
+<link rel="icon" type="image/x-icon" href="../../assets/images/favicon.png">
 
 <title> About - Global Fun City </title>
 
