--- a/pages/other pages/ticketprices.html
+++ b/pages/other pages/ticketprices.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset='UTF-8'>
-	<link rel="icon" type="image/x-icon" href="./assets/images/favicon.png">	
+	<link rel="icon" type="image/x-icon" href="../../assets/images/favicon.png">	
 <title> Ticket Prices - Global Fun City </title>
 <link rel="stylesheet" href="../../assets/css/ticketprices.css" />
 
@@ -25,7 +25,7 @@
 </a>
    	 <nav class="navbar">
 	 <ul>
-		<li> <a class="navigation__link" href="../../index.html"><b>HOME</b></a> </li>		
+	 <li> <a class="navigation__link" href="../../index.html"><b>HOME</b></a> </li>		
 	 <li> <a class="navigation__link" href="../../pages/other pages/home.html"> <b>ABOUT</b> </a> </li>
 	 <li> <a class="navigation__link" href="../../pages/other pages/events.html"> <b>EVENTS </b> </a> </li>
 	 <li> <a class="navigation__link" href="../../pages/other pages/offer.html"> <b>OFFERS </b> </a> </li>
