--- a/pages/shop/checkout.html
+++ b/pages/shop/checkout.html
@@ -128,18 +128,18 @@
 
 <table class="orders">
     <tr>
-        <th>White T-shirt With Logo x 1</th>
-        <th>$199.00</th>
+        <th id="t-shirt">White T-shirt With Logo x 1</th>
+        <th id="price">$199.00</th>
     </tr>
 
     <tr>
-        <th>Black T-Shirt with Events x 1</th>
-        <th>$299.00</th>
+        <th id="t-shirt">Black T-Shirt with Events x 1</th>
+        <th id="price">$299.00</th>
     </tr>
 
     <tr>
-        <th>Total</th>
-        <th>$498.00</th>
+        <th id="total">Total</th>
+        <th id="price">$498.00</th>
     </tr>
 </table>
 
