--- a/pages/shop/white-bag-with-logo.html
+++ b/pages/shop/white-bag-with-logo.html
@@ -109,7 +109,7 @@
 
 <footer>
     <div class="logo">
-		<img src="../../assets/images/globalfuncitylogo.png" class="footer-logo"/>
+		<img src="../../assets/images/globalfuncitylogo.png" class="footer-logo" alt="logo"/>
 	</div>
 
 
