--- a/pages/upcoming events/festivel-of-beer.html
+++ b/pages/upcoming events/festivel-of-beer.html
@@ -3,6 +3,7 @@
 
 <head>
 <meta charset='UTF-8'>
+<link rel="icon" type="image/x-icon" href="../../assets/images/favicon.png">
 
 <title> Festival of Beer - Global Fun City </title>
 
