--- a/pages/upcoming events/festivel-of-colours.html
+++ b/pages/upcoming events/festivel-of-colours.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+<meta charset='UTF-8'>
+<link rel="icon" type="image/x-icon" href="../../assets/images/favicon.png">
+
 <title> Festival of Colours - Global Fun City </title>
 <link rel="stylesheet" href="../../assets/upcoming events css/festivel-of-colours.css" />
 
