--- a/pages/other pages/getintouch.html
+++ b/pages/other pages/getintouch.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
-
+<head>
 <title> Contact </title>
 <link rel="stylesheet" href="../../assets/css/getintouch.css" />
-<head>
+
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter+Tight&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Nanum+Pen+Script&family=Open+Sans:wght@700&family=Poppins:wght@300;500&family=Reem+Kufi&family=Sacramento&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
 
 <div class="header" >
 <a href="#" >
-<img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px"/>
+<img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px" alt="logo" >
 </a>
    	 <nav class="navbar">
 	 <ul>
