index responsive completed

--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-
 <html lang="en">
-
 <head>
-
-<meta charset='UTF-8'>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" type="image/x-icon" href="./assets/images/favicon.png">
 
 <title> Global Fun City </title>
@@ -67,7 +66,7 @@
 	<h2> Welcome to </h2>
 	<h1> The Global Fun City </h1>
 </div>
-<img src="https://cdn1.parksmedia.wdprapps.disney.com/dam/disney-world/50th-anniversary/countdown/WDW_50th_clock_plate_bg_Desktop.png" height="410px" width="960px" class="bg2" alt="background-fixed-img"/>
+<img src="https://cdn1.parksmedia.wdprapps.disney.com/dam/disney-world/50th-anniversary/countdown/WDW_50th_clock_plate_bg_Desktop.png" height="410" width="960" class="bg2" alt="background-fixed-img"/>
 <img src="./assets/images/Sparkles.webp" class="sparkles" alt="sparkles"/>
 </div>
 
