sign up responsive

--- a/pages/signup for booking/signup.html
+++ b/pages/signup for booking/signup.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<body>
 <head>
 
-<meta charset='UTF-8'>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <link rel="icon" type="image/x-icon" href="../../assets/images/favicon.png">
 
 <title> Sign Up - Global Fun City</title>
@@ -16,7 +20,6 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 
 </head>
-<body>
 
 
 
@@ -39,7 +42,7 @@
     <a href="../../pages/signup for booking/create-an-account.html"><button>Create an Account</button></a>
 </div>
 </div>
-
+</body>
 
 </body>
 </html> 
