index page responsive

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	 </ul>
 
 	 </nav>
-	 <div>
+	 <div class="btn-book-now">
 	 	 <button><a href="./pages/signup for booking/signup.html"> <b>BOOK NOW </b> </a></button>
 </div>
 </div>
