--- a/pages/signup for booking/create-an-account.html
+++ b/pages/signup for booking/create-an-account.html
@@ -2,8 +2,9 @@
 <html lang="en">
 
 <head>
-
-<meta charset='UTF-8'>
+<meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" type="image/x-icon" href="../../assets/images/favicon.png">
 
 <title> Create an Account - Global Fun City</title>
@@ -17,6 +18,7 @@
 
 </head>
 <body>
+    
 
 <div class="image-signup">    
 <div class="image">
